# edge-researcher-ai

./: .gitignore  README.md  app_streamlit.py  pyproject.toml
src/researcher_ai/: __main__.py  main.py
src/researcher_ai/chunking/: pipeline.py
src/researcher_ai/ingest/: pipeline.py
src/researcher_ai/notes/: generator.py
src/researcher_ai/present/: __init__.py  formatter.py
src/researcher_ai/quiz/: generator.py
src/researcher_ai/retrieval/: index.py
src/researcher_ai/utils/: text_clean.py
