[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-researcher-ai"
version = "0.1.0"
description = "Local-first edge AI researcher assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "streamlit>=1.38.0",
]

[project.scripts]
researcher-ai = "researcher_ai.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
